# ophBOX

./: .gitignore  AGENTS.md  App.config  Form1.Designer.vb  Form1.resx  Form1.vb  Module1.vb  Module2.vb  README.md  TODO-sam.md  accountType.vb  frmControlPanel.Designer.vb  frmControlPanel.vb  frmMenu.Designer.vb  frmMenu.vb  frmOptions.Designer.vb  frmOptions.vb  functions.vb  main.vb  mainForm.Designer.vb  mainForm.resx  mainForm.vb  ophBox.vbproj
My Project/: AssemblyInfo.vb  Resources.Designer.vb  Resources.resx  Settings.Designer.vb  Settings.settings
v0.1/: mainForm.resx  mainForm.vb  ophBox_TemporaryKey.pfx
v0.1/My Project/: Resources.Designer.vb
v0.2/: App.config  addDatabaseFrm.Designer.vb  addDatabaseFrm.vb  addServerFrm.Designer.vb  addServerFrm.vb  clsModule.vb  functionList.vb  mainFrm.Designer.vb  mainFrm.resx  mainFrm.vb  ophBox.sln  ophBox.vbproj  ophBox_1_TemporaryKey.pfx  ophBox_2_TemporaryKey.pfx  settingFrm.Designer.vb  settingFrm.vb
v0.2/My Project/: Resources.Designer.vb  Settings.Designer.vb  Settings.settings
v0.3/docs/: migrasi.md  summary.md
v0.3/tauri/: index.html  package-lock.json  package.json  (+1 more)
v0.3/tauri/src-tauri/: Cargo.toml  tauri.conf.json
v0.3/tauri/src-tauri/src/: lib.rs  main.rs
v1.0/: frmOptions.Designer.vb  functions.vb  mainForm.Designer.vb  ophBox.sln
v1.1/: App.config  addDatabaseFrm.Designer.vb  addDatabaseFrm.vb  addServerFrm.Designer.vb  addServerFrm.vb  functionList.vb  mainFrm.Designer.vb  mainFrm.resx  mainFrm.vb  ophBox.vbproj  ophBox_TemporaryKey.pfx  settingFrm.Designer.vb  settingFrm.vb
(+12 files in other folders)
