[package]
name = "oph-control-studio"
version = "0.1.0"
description = "OPH Control Studio"
authors = ["OPH"]
edition = "2021"

[lib]
name = "oph_control_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.2.0", features = [] }

[dependencies]
tauri = { version = "=2.2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
